--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <form action="" class="search">
+      <input type="text" />
+      <button type="submit">serch</button>
+    </form>
+    <ul class="film_list"></ul>
+    <!-- <button type="button">add_movie</button>
+    <button type="button">view_late</button> -->
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/body.html"></include>
