--- a/src/index-lib.html
+++ b/src/index-lib.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/header.html"></include>
+    <include src="./partials/header-lib.html"></include>
     <include src="./partials/body-lib.html"></include>
     <include src="./partials/footer.html"></include>
 </body>
