--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/body.html"></include>
     <include src="./partials/footer.html"></include>
+    <div id="scroll-check" class="scroll-check"></div>
   </body>
 </html>
