--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <include src="./partials/body.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-our-team.html"></include>
+    <div id="scroll-check" class="scroll-check"></div>
   </body>
 </html>
