--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-our-team.html"></include>
     <include src="./partials/moviesGallery.html"></include>
+    <include src="./partials/modal.html"></include>
     <div id="scroll-check" class="scroll-check"></div>
   </body>
 </html>
