--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/preloader.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/body.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-our-team.html"></include>
     <include src="./partials/moviesGallery.html"></include>
+    <include src="./partials/loader.html"></include>
     <div id="scroll-check" class="scroll-check"></div>
   </body>
 </html>
