--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,13 @@
     <!-- <button type="button">add_movie</button>
     <button type="button">view_late</button> -->
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/preloader.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/body.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-our-team.html"></include>
     <include src="./partials/moviesGallery.html"></include>
-
     <include src="./partials/modal.html"></include>
-
-    <div id="scroll-check" class="scroll-check"></div>
+    <include src="./partials/spinner.html"></include>
   </body>
 </html>
