--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-our-team.html"></include>
     <include src="./partials/moviesGallery.html"></include>
-    <include src="./partials/modal.html"></include>
     <include src="./partials/spinner.html"></include>
+    <include src="./partials/backdrop.html"></include>
   </body>
 </html>
