--- a/src/index-lib.html
+++ b/src/index-lib.html
@@ -12,5 +12,6 @@
     <include src="./partials/header-lib.html"></include>
     <include src="./partials/body-lib.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/backdrop.html"></include>
   </body>
 </html>
