--- a/src/index-lib.html
+++ b/src/index-lib.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./js/index-lib.js"></script>
+    <script type="module" src="./library.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header-lib.html"></include>
-    <include src="./partials/body-lib.html"></include>
+    <!-- <include src="./partials/body-lib.html"></include> -->
+    <include src="./partials/body.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
