--- a/src/index-lib.html
+++ b/src/index-lib.html
@@ -10,7 +10,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header-lib.html"></include>
-    <!-- <include src="./partials/body-lib.html"></include> -->
+    <include src="./partials/body-lib.html"></include>
     <include src="./partials/body.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-our-team.html"></include>
