--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" 
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -12,6 +15,7 @@
     <button type="button">view_late</button> -->
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/preloader.html"></include>
+    <include src="./partials/topButton.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/body.html"></include>
     <include src="./partials/spinner.html"></include>
